RESOLVED FIXED177370
Thrown ObjC exception when right clicking on <img> containing mp4 link
https://bugs.webkit.org/show_bug.cgi?id=177370
Summary Thrown ObjC exception when right clicking on <img> containing mp4 link
Jer Noble
Reported 2017-09-22 11:15:27 PDT
Thrown ObjC exception when right clicking on <img> containing mp4 link
Attachments
Patch (1.82 KB, patch)
2017-09-22 11:17 PDT, Jer Noble
no flags
Patch for landing (10.88 KB, patch)
2017-09-25 15:13 PDT, Jer Noble
no flags
Patch for landing (11.07 KB, patch)
2017-09-25 15:14 PDT, Jer Noble
no flags
Patch for landing (11.13 KB, patch)
2017-09-25 15:57 PDT, Jer Noble
no flags
Patch for landing (11.18 KB, patch)
2017-09-26 08:26 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2017-09-22 11:17:34 PDT
Darin Adler
Comment 2 2017-09-23 17:33:13 PDT
No regression test? Why?
Jer Noble
Comment 3 2017-09-25 15:13:29 PDT
Created attachment 321751 [details] Patch for landing
Jer Noble
Comment 4 2017-09-25 15:14:36 PDT
Created attachment 321753 [details] Patch for landing
Jer Noble
Comment 5 2017-09-25 15:57:41 PDT
Created attachment 321761 [details] Patch for landing
Jer Noble
Comment 6 2017-09-26 08:26:34 PDT
Created attachment 321818 [details] Patch for landing
WebKit Commit Bot
Comment 7 2017-09-26 10:53:51 PDT
Comment on attachment 321818 [details] Patch for landing Clearing flags on attachment: 321818 Committed r222505: <http://trac.webkit.org/changeset/222505>
WebKit Commit Bot
Comment 8 2017-09-26 10:53:53 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2017-09-27 12:17:49 PDT
Note You need to log in before you can comment on or make changes to this bug.