Thrown ObjC exception when right clicking on <img> containing mp4 link https://bugs.webkit.org/show_bug.cgi?id=177370

Reviewed by Darin Adler.

Source/WebKit:

Creating a NSImage from mp4 data will fail and return nil; do a nil-check before attempting
to put the results into a NSMutableArray.

* UIProcess/mac/WebContextMenuProxyMac.mm:
(WebKit::WebContextMenuProxyMac::createShareMenuItem):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/mac/ContextMenuImgWithVideo.html: Added.
* TestWebKitAPI/Tests/WebKit/mac/ContextMenuImgWithVideo.mm: Added.
(-[ContextMenuImgWithVideoDelegate _webView:contextMenu:forElement:]):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/193799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222505 268f45cc-cd09-0410-ab3c-d52691b4dbfc